fix notifier issue

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,7 @@ Size=92,99
 Collapsed=0
 
 [Window][Analog Inputs]
-Pos=648,40
+Pos=541,72
 Size=204,65
 Collapsed=0
 
@@ -19,17 +19,17 @@ Size=235,169
 Collapsed=0
 
 [Window][System Joysticks]
-Pos=5,385
+Pos=33,348
 Size=192,150
 Collapsed=0
 
 [Window][Joysticks]
-Pos=250,465
-Size=796,73
+Pos=148,347
+Size=796,240
 Collapsed=0
 
 [Window][DIO]
-Pos=470,20
+Pos=524,250
 Size=104,48
 Collapsed=0
 
@@ -39,28 +39,33 @@ Size=85,48
 Collapsed=0
 
 [Window][PWM Outputs]
-Pos=910,20
+Pos=828,53
 Size=98,48
 Collapsed=0
 
 [Window][Relays]
-Pos=180,20
+Pos=169,29
 Size=73,48
 Collapsed=0
 
 [Window][Other Devices]
-Pos=1025,20
+Pos=1016,19
 Size=250,695
 Collapsed=0
 
 [Window][Solenoids]
-Pos=290,20
+Pos=292,47
 Size=148,48
 Collapsed=0
 
 [Window][Timing]
-Pos=5,150
+Pos=24,137
 Size=133,127
+Collapsed=0
+
+[Window][PDP]
+Pos=245,155
+Size=233,301
 Collapsed=0
 
 [SimWindow][GLOBAL]
@@ -105,7 +110,7 @@ visible=0
 enabled=1
 
 [SimWindow][PWM Outputs]
-visible=1
+visible=0
 enabled=1
 
 [SimWindow][Relays]
@@ -128,9 +133,16 @@ enabled=1
 visible=1
 enabled=1
 
+[Joystick][0]
+guid=78696e70757401000000000000000000
+useGamepad=0
+
 [DriverStation][Main]
 disable=0
 
+[Device][navX-Sensor[4]]
+open=1
+
 [Device][Compressor[0]]
-open=0
+open=1
 
