fix background field image

--- a/imgui.ini
+++ b/imgui.ini
@@ -55,7 +55,7 @@ Collapsed=0
 
 [Window][Solenoids]
 Pos=290,20
-Size=92,48
+Size=148,48
 Collapsed=0
 
 [Window][Timing]
@@ -132,5 +132,8 @@ enabled=1
 disable=0
 
 [Device][navX-Sensor[4]]
+open=0
+
+[Device][Compressor[0]]
 open=0
 
