add some control panel dashboard stuff

--- a/imgui.ini
+++ b/imgui.ini
@@ -5,47 +5,47 @@ Collapsed=0
 
 [Window][Robot State]
 Pos=5,20
-Size=92,99
+Size=109,114
 Collapsed=0
 
 [Window][Analog Inputs]
 Pos=541,72
-Size=204,65
+Size=248,74
 Collapsed=0
 
 [Window][FMS]
 Pos=5,540
-Size=235,169
+Size=281,190
 Collapsed=0
 
 [Window][System Joysticks]
 Pos=5,385
-Size=192,150
+Size=232,174
 Collapsed=0
 
 [Window][Joysticks]
 Pos=250,465
-Size=796,240
+Size=976,82
 Collapsed=0
 
 [Window][DIO]
 Pos=470,20
-Size=104,48
+Size=124,54
 Collapsed=0
 
 [Window][Encoders]
 Pos=640,215
-Size=85,48
+Size=101,54
 Collapsed=0
 
 [Window][PWM Outputs]
 Pos=910,20
-Size=98,48
+Size=117,54
 Collapsed=0
 
 [Window][Relays]
 Pos=180,20
-Size=73,48
+Size=86,54
 Collapsed=0
 
 [Window][Other Devices]
@@ -55,20 +55,20 @@ Collapsed=0
 
 [Window][Solenoids]
 Pos=290,20
-Size=148,48
+Size=177,54
 Collapsed=0
 
 [Window][Timing]
 Pos=5,150
-Size=133,127
+Size=154,142
 Collapsed=0
 
 [SimWindow][GLOBAL]
 width=1280
 height=720
 maximized=0
-xpos=-1
-ypos=-1
+xpos=137
+ypos=166
 userScale=2
 style=0
 disableOutputsOnDS=1
@@ -128,10 +128,6 @@ enabled=1
 visible=1
 enabled=1
 
-[Joystick][0]
-guid=78696e70757401000000000000000000
-useGamepad=0
-
 [DriverStation][Main]
 disable=0
 
@@ -139,5 +135,8 @@ disable=0
 open=0
 
 [Device][Compressor[0]]
+open=0
+
+[Device][REV Color Sensor V3[0,82]]
 open=0
 
