Change the simulation gui layout

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,47 +4,47 @@ Size=400,400
 Collapsed=0
 
 [Window][Robot State]
-Pos=5,20
+Pos=66,43
 Size=92,99
 Collapsed=0
 
 [Window][Analog Inputs]
-Pos=541,72
+Pos=670,39
 Size=204,65
 Collapsed=0
 
 [Window][FMS]
-Pos=5,540
+Pos=-7,281
 Size=235,169
 Collapsed=0
 
 [Window][System Joysticks]
-Pos=5,385
+Pos=18,552
 Size=192,150
 Collapsed=0
 
 [Window][Joysticks]
-Pos=250,465
-Size=796,73
+Pos=229,532
+Size=796,183
 Collapsed=0
 
 [Window][DIO]
-Pos=470,20
+Pos=527,48
 Size=104,48
 Collapsed=0
 
 [Window][Encoders]
-Pos=640,215
+Pos=62,464
 Size=85,48
 Collapsed=0
 
 [Window][PWM Outputs]
-Pos=910,20
-Size=104,48
+Pos=900,51
+Size=110,54
 Collapsed=0
 
 [Window][Relays]
-Pos=180,20
+Pos=67,394
 Size=73,48
 Collapsed=0
 
@@ -54,21 +54,31 @@ Size=250,695
 Collapsed=0
 
 [Window][Solenoids]
-Pos=290,20
-Size=148,48
+Pos=297,45
+Size=169,54
 Collapsed=0
 
 [Window][Timing]
-Pos=5,150
+Pos=42,215
 Size=133,127
 Collapsed=0
 
+[Window][RoboRIO]
+Pos=374,172
+Size=119,146
+Collapsed=0
+
+[Window][2D Field View]
+Pos=228,137
+Size=797,397
+Collapsed=0
+
 [SimWindow][GLOBAL]
-width=1280
-height=720
+width=1288
+height=729
 maximized=0
-xpos=78
-ypos=40
+xpos=304
+ypos=208
 userScale=2
 style=0
 disableOutputsOnDS=1
@@ -81,7 +91,7 @@ visible=1
 enabled=1
 
 [SimWindow][FMS]
-visible=1
+visible=0
 enabled=1
 
 [SimWindow][System Joysticks]
@@ -97,6 +107,14 @@ visible=1
 enabled=1
 
 [SimWindow][Encoders]
+visible=1
+enabled=1
+
+[SimWindow][2D Field Settings]
+visible=0
+enabled=1
+
+[SimWindow][2D Field View]
 visible=1
 enabled=1
 
@@ -128,12 +146,42 @@ enabled=1
 visible=1
 enabled=1
 
+[Joystick][0]
+useGamepad=0
+guid=030000006d04000015c2000000000000
+
 [DriverStation][Main]
 disable=0
+
+[Field2D][Field]
+image=
+top=0
+left=0
+bottom=-1
+right=-1
+width=15.980000
+height=8.210000
+
+[Field2D][Robot]
+image=
+width=0.685800
+length=0.820400
+
+[PWM][0]
+name=
 
 [Device][navX-Sensor[4]]
 open=0
 
 [Device][Compressor[0]]
+open=0
+
+[Device][Field2D]
+open=0
+
+[Device][REV Color Sensor V3[0,82]]
+open=0
+
+[PCM][0]
 open=0
 
