Add field image to simulator

--- a/imgui.ini
+++ b/imgui.ini
@@ -69,16 +69,21 @@ Size=119,146
 Collapsed=0
 
 [Window][2D Field View]
-Pos=228,137
-Size=797,397
+Pos=228,128
+Size=797,406
+Collapsed=0
+
+[Window][2D Field Settings]
+Pos=200,150
+Size=148,123
 Collapsed=0
 
 [SimWindow][GLOBAL]
-width=1920
-height=1017
-maximized=1
-xpos=0
-ypos=23
+width=1401
+height=773
+maximized=0
+xpos=193
+ypos=99
 userScale=2
 style=0
 disableOutputsOnDS=1
@@ -154,7 +159,7 @@ guid=030000006d04000015c2000000000000
 disable=0
 
 [Field2D][Field]
-image=
+image=res\field.png
 top=0
 left=0
 bottom=-1
