--- a/imgui.ini
+++ b/imgui.ini
@@ -25,7 +25,7 @@ Collapsed=0
 
 [Window][Joysticks]
 Pos=229,532
-Size=796,73
+Size=796,183
 Collapsed=0
 
 [Window][DIO]
@@ -150,6 +150,10 @@ enabled=1
 [SimWindow][Timing]
 visible=1
 enabled=1
+
+[Joystick][0]
+useGamepad=0
+guid=030000006d04000015c2000000000000
 
 [DriverStation][Main]
 disable=0
