change comment for use with xbox controller

--- a/imgui.ini
+++ b/imgui.ini
@@ -19,13 +19,13 @@ Size=235,169
 Collapsed=0
 
 [Window][System Joysticks]
-Pos=106,559
+Pos=-9,565
 Size=192,150
 Collapsed=0
 
 [Window][Joysticks]
 Pos=229,532
-Size=796,73
+Size=796,240
 Collapsed=0
 
 [Window][DIO]
@@ -150,6 +150,10 @@ enabled=1
 [SimWindow][Timing]
 visible=1
 enabled=1
+
+[Joystick][0]
+useGamepad=1
+guid=78696e70757401000000000000000000
 
 [DriverStation][Main]
 disable=0
