--- a/imgui.ini
+++ b/imgui.ini
@@ -78,111 +78,539 @@ Pos=512,184
 Size=148,123
 Collapsed=0
 
-[SimWindow][GLOBAL]
-width=1412
-height=766
+[Window][###Other Devices]
+Pos=1025,20
+Size=250,695
+Collapsed=0
+
+[Window][###Timing]
+Pos=5,150
+Size=133,104
+Collapsed=0
+
+[Window][###FMS]
+Pos=5,540
+Size=235,169
+Collapsed=0
+
+[Window][###Joysticks]
+Pos=250,465
+Size=796,73
+Collapsed=0
+
+[Window][###System Joysticks]
+Pos=7,283
+Size=192,218
+Collapsed=0
+
+[Window][###NetworkTables]
+Pos=243,134
+Size=750,185
+Collapsed=0
+
+[MainWindow][GLOBAL]
+width=1280
+height=720
 maximized=0
-xpos=1623
-ypos=260
+xpos=-1
+ypos=-1
 userScale=2
 style=0
-disableOutputsOnDS=1
-[SimWindow][Addressable LEDs]
-visible=0
-enabled=1
 
-[SimWindow][Analog Inputs]
-visible=1
-enabled=1
+[GlassStorage][NetworkTables]
+tree=1
+connections=0
+flags=0
+timestamp=0
+createNonCanonical=0
 
-[SimWindow][FMS]
-visible=0
-enabled=1
+[GlassStorage][NetworkTables###FMSInfo]
+open=0
 
-[SimWindow][System Joysticks]
-visible=1
-enabled=1
+[GlassStorage][NetworkTables###LiveWindow]
+open=1
 
-[SimWindow][Joysticks]
-visible=1
-enabled=1
+[GlassStorage][NetworkTables###LiveWindow###.status]
+open=0
 
-[SimWindow][DIO]
-visible=1
-enabled=1
+[GlassStorage][NetworkTables###LiveWindow###Ungrouped]
+open=0
 
-[SimWindow][Encoders]
-visible=1
-enabled=1
+[GlassStorage][NetworkTables###LiveWindow###Ungrouped###Compressor[0]]
+open=0
+
+[GlassStorage][NetworkTables###LiveWindow###Ungrouped###DoubleSolenoid[0,0]]
+open=0
+
+[GlassStorage][NetworkTables###LiveWindow###Ungrouped###DoubleSolenoid[0,2]]
+open=0
+
+[GlassStorage][NetworkTables###LiveWindow###Ungrouped###PWM[0]]
+open=0
+
+[GlassStorage][NetworkTables###LiveWindow###Ungrouped###PowerDistributionPanel[50]]
+open=0
+
+[GlassStorage][NetworkTables###LiveWindow###Ungrouped###navX-Sensor]
+open=0
+
+[GlassStorage][NetworkTables###SmartDashboard]
+open=1
+
+[GlassStorage][NetworkTables###SmartDashboard###Field]
+open=0
+
+[GlassStorage][NetworkTables###limelight]
+open=0
+
+[GlassStorage][Other Devices###Compressor[0]]
+name=
+name###open=0
+
+[GlassStorage][Other Devices###REV Color Sensor V3[0,82]]
+name=
+name###open=0
+
+[GlassStorage][Other Devices###navX-Sensor[4]]
+name=
+name###open=0
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan3]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan4]
+name=
+
+[Data Sources][REV Color Sensor V3[0,82]-Blue]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan0]
+name=
+
+[Data Sources][Solenoid[0,3]]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan5]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan6]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan7]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan8]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan9]
+name=
+
+[Data Sources][NT:/FMSInfo/FMSControlData]
+name=
+
+[Data Sources][NT:/limelight/pipeline]
+name=
+
+[Data Sources][navX-Sensor[4]-Connected]
+name=
+
+[Data Sources][NT:/LiveWindow/.status/LW Enabled]
+name=
+
+[Data Sources][navX-Sensor[4]-Pitch]
+name=
+
+[Data Sources][REV Color Sensor V3[0,82]-Red]
+name=
+
+[Data Sources][NT:/FMSInfo/StationNumber]
+name=
+
+[Data Sources][Y Accel[0]]
+name=
+
+[Data Sources][Comp Current[0]]
+name=
+
+[Data Sources][FMS:MatchTime]
+name=
+
+[Data Sources][Solenoid[0,0]]
+name=
+
+[Data Sources][navX-Sensor[4]-CompassHeading]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PWM[0]/.actuator]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/DoubleSolenoid[0,0]/.actuator]
+name=
+
+[Data Sources][navX-Sensor[4]-Yaw]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PWM[0]/Value]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/Compressor[0]/Enabled]
+name=
+
+[Data Sources][Z Accel[0]]
+name=
+
+[Data Sources][NT:/FMSInfo/MatchType]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/TotalCurrent]
+name=
+
+[Data Sources][FMS:AutonomousMode]
+name=
+
+[Data Sources][Solenoid[0,1]]
+name=
+
+[Data Sources][NT:/FMSInfo/MatchNumber]
+name=
+
+[Data Sources][FMS:FMSAttached]
+name=
+
+[Data Sources][FMS:AllianceStationID]
+name=
+
+[Data Sources][REV Color Sensor V3[0,82]-Proximity]
+name=
+
+[Data Sources][navX-Sensor[4]-LinearWorldAccelX]
+name=
+
+[Data Sources][FMS:RobotEnabled]
+name=
+
+[Data Sources][navX-Sensor[4]-LinearWorldAccelZ]
+name=
+
+[Data Sources][NT:/limelight/ledMode]
+name=
+
+[Data Sources][navX-Sensor[4]-LinearWorldAccelY]
+name=
+
+[Data Sources][REV Color Sensor V3[0,82]-IR]
+name=
+
+[Data Sources][FMS:DSAttached]
+name=
+
+[Data Sources][navX-Sensor[4]-Roll]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/navX-Sensor/Value]
+name=
+
+[Data Sources][NT:/FMSInfo/ReplayNumber]
+name=
+
+[Data Sources][Solenoid[0,2]]
+name=
+
+[Data Sources][navX-Sensor[4]-FusedHeading]
+name=
+
+[Data Sources][FMS:TestMode]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Voltage]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/DoubleSolenoid[0,2]/.actuator]
+name=
+
+[Data Sources][FMS:EStop]
+name=
+
+[Data Sources][REV Color Sensor V3[0,82]-Green]
+name=
+
+[Data Sources][NT:/SmartDashboard/Field/.controllable]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan10]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan11]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan12]
+name=
+
+[Data Sources][Compressor On[0]]
+name=
+
+[Data Sources][Pressure Switch[0]]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan13]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan14]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan15]
+name=
+
+[Data Sources][X Accel[0]]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/Compressor[0]/Pressure switch]
+name=
+
+[Data Sources][Closed Loop[0]]
+name=
+
+[Data Sources][NT:/FMSInfo/IsRedAlliance]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan1]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan2]
+name=
 
 [SimWindow][2D Field Settings]
+name=
 visible=0
 enabled=1
 
 [SimWindow][2D Field View]
+name=
 visible=1
 enabled=1
 
-[SimWindow][PDP]
+[SimWindow][Addressable LEDs]
+name=
 visible=0
 enabled=1
 
-[SimWindow][PWM Outputs]
+[SimWindow][Analog Inputs]
+name=
 visible=1
 enabled=1
 
-[SimWindow][Relays]
+[SimWindow][DIO]
+name=
 visible=1
 enabled=1
 
-[SimWindow][RoboRIO]
+[SimWindow][Encoders]
+name=
+visible=1
+enabled=1
+
+[SimWindow][FMS]
+name=
+visible=0
+enabled=1
+
+[SimWindow][GLOBAL]
+name=
+visible=1
+enabled=1
+
+[SimWindow][Joysticks]
+name=
+visible=1
+enabled=1
+
+[SimWindow][Mechanism 2D]
+name=
 visible=0
 enabled=1
 
 [SimWindow][Other Devices]
+name=
 visible=1
 enabled=1
 
+[SimWindow][PDP]
+name=
+visible=0
+enabled=1
+
+[SimWindow][PWM Outputs]
+name=
+visible=1
+enabled=1
+
+[SimWindow][Relays]
+name=
+visible=1
+enabled=1
+
+[SimWindow][RoboRIO]
+name=
+visible=0
+enabled=1
+
 [SimWindow][Solenoids]
+name=
+visible=1
+enabled=1
+
+[SimWindow][System Joysticks]
+name=
 visible=1
 enabled=1
 
 [SimWindow][Timing]
+name=
 visible=1
 enabled=1
 
+[HALProvider][Other Devices]
+name=
+visible=1
+enabled=1
+
+[HALProvider][Timing]
+name=
+visible=1
+enabled=1
+
+[NTProviderWindow][NetworkTables]
+name=
+visible=1
+enabled=1
+
+[NTProvider][/SmartDashboard/Field]
+name=Field2d
+
+[NTProvider][/FMSInfo]
+name=FMSInfo
+
+[NTProvider][/LiveWindow/Ungrouped/navX-Sensor]
+name=Gyro
+
+[DSManager][FMS]
+name=
+visible=1
+enabled=1
+
+[DSManager][Joysticks]
+name=
+visible=1
+enabled=1
+
+[DSManager][Keyboard 0 Settings]
+name=
+visible=0
+enabled=1
+
+[DSManager][Keyboard 1 Settings]
+name=
+visible=0
+enabled=1
+
+[DSManager][Keyboard 2 Settings]
+name=
+visible=0
+enabled=1
+
+[DSManager][Keyboard 3 Settings]
+name=
+visible=0
+enabled=1
+
+[DSManager][System Joysticks]
+name=
+visible=1
+enabled=1
+
+[KeyboardJoystick][0]
+axisCount=3
+buttonCount=4
+povCount=1
+axis0incKey=68
+axis0decKey=65
+axis0keyRate=0.050000
+axis0decayRate=0.050000
+axis0maxAbsValue=1.000000
+axis1incKey=83
+axis1decKey=87
+axis1keyRate=0.050000
+axis1decayRate=0.050000
+axis1maxAbsValue=1.000000
+axis2incKey=82
+axis2decKey=69
+axis2keyRate=0.010000
+axis2decayRate=0.000000
+axis2maxAbsValue=1.000000
+button0=90
+button1=88
+button2=67
+button3=86
+pov0key0=328
+pov0key45=329
+pov0key90=326
+pov0key135=323
+pov0key180=322
+pov0key225=321
+pov0key270=324
+pov0key315=327
+
+[KeyboardJoystick][1]
+axisCount=2
+buttonCount=4
+povCount=0
+axis0incKey=76
+axis0decKey=74
+axis0keyRate=0.050000
+axis0decayRate=0.050000
+axis0maxAbsValue=1.000000
+axis1incKey=75
+axis1decKey=73
+axis1keyRate=0.050000
+axis1decayRate=0.050000
+axis1maxAbsValue=1.000000
+button0=77
+button1=44
+button2=46
+button3=47
+
+[KeyboardJoystick][2]
+axisCount=2
+buttonCount=6
+povCount=0
+axis0incKey=262
+axis0decKey=263
+axis0keyRate=0.050000
+axis0decayRate=0.050000
+axis0maxAbsValue=1.000000
+axis1incKey=264
+axis1decKey=265
+axis1keyRate=0.050000
+axis1decayRate=0.050000
+axis1maxAbsValue=1.000000
+button0=260
+button1=268
+button2=266
+button3=261
+button4=269
+button5=267
+
+[KeyboardJoystick][3]
+axisCount=0
+buttonCount=0
+povCount=0
+
 [DriverStation][Main]
 disable=0
+zeroDisconnectedJoysticks=1
+enableDisableKeys=0
+estopKey=0
 
-[Field2D][Field]
-image=res\field.png
-top=0
-left=0
-bottom=-1
-right=-1
-width=15.850000
-height=7.920000
-
-[Field2D][Robot]
-image=
-width=0.685800
-length=0.820400
-
-[PWM][0]
-name=
-
-[Device][navX-Sensor[4]]
-open=0
-
-[Device][Compressor[0]]
-open=0
-
-[Device][Field2D]
-open=1
-
-[Device][REV Color Sensor V3[0,82]]
-open=0
-
-[PCM][0]
-open=0
+[Mechanism2D][Mechanism2D]
+jsonLocation=
 
