hopefully add field image back to simulator

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Robot State]
-Pos=66,43
+Pos=62,53
 Size=92,99
 Collapsed=0
 
@@ -95,27 +95,46 @@ Collapsed=0
 
 [Window][###Joysticks]
 Pos=250,465
-Size=796,73
+Size=796,240
 Collapsed=0
 
 [Window][###System Joysticks]
-Pos=7,283
+Pos=49,271
 Size=192,218
 Collapsed=0
 
 [Window][###NetworkTables]
-Pos=243,134
+Pos=237,286
 Size=750,185
+Collapsed=0
+
+[Window][###/SmartDashboard/Field]
+Pos=366,85
+Size=614,394
 Collapsed=0
 
 [MainWindow][GLOBAL]
 width=1280
 height=720
 maximized=0
-xpos=-1
-ypos=-1
+xpos=96
+ypos=410
 userScale=2
 style=0
+
+[GlassStorage][/SmartDashboard/Field]
+image=E:\Code\Robotics\CompetitionBot2020\res\field.png
+top=0
+left=0
+bottom=-1
+right=-1
+width=15.980000
+height=8.210000
+
+[GlassStorage][/SmartDashboard/Field###Robot]
+image=
+width=0.685800
+length=0.820400
 
 [GlassStorage][NetworkTables]
 tree=1
@@ -128,7 +147,7 @@ createNonCanonical=0
 open=0
 
 [GlassStorage][NetworkTables###LiveWindow]
-open=1
+open=0
 
 [GlassStorage][NetworkTables###LiveWindow###.status]
 open=0
@@ -158,7 +177,7 @@ open=0
 open=1
 
 [GlassStorage][NetworkTables###SmartDashboard###Field]
-open=0
+open=1
 
 [GlassStorage][NetworkTables###limelight]
 open=0
@@ -184,28 +203,34 @@ name=
 [Data Sources][REV Color Sensor V3[0,82]-Blue]
 name=
 
-[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan0]
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan5]
 name=
 
 [Data Sources][Solenoid[0,3]]
 name=
 
-[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan5]
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan7]
 name=
 
 [Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan6]
 name=
 
-[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan7]
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan9]
 name=
 
 [Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan8]
 name=
 
-[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan9]
+[Data Sources][Joystick[0] Button[7]]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan0]
 name=
 
 [Data Sources][NT:/FMSInfo/FMSControlData]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan2]
 name=
 
 [Data Sources][NT:/limelight/pipeline]
@@ -215,6 +240,9 @@ name=
 name=
 
 [Data Sources][NT:/LiveWindow/.status/LW Enabled]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/navX-Sensor/.controllable]
 name=
 
 [Data Sources][navX-Sensor[4]-Pitch]
@@ -232,7 +260,16 @@ name=
 [Data Sources][Comp Current[0]]
 name=
 
+[Data Sources][Joystick[0] Axis[5]]
+name=
+
 [Data Sources][FMS:MatchTime]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/.controllable]
+name=
+
+[Data Sources][Joystick[0] Axis[1]]
 name=
 
 [Data Sources][Solenoid[0,0]]
@@ -241,10 +278,19 @@ name=
 [Data Sources][navX-Sensor[4]-CompassHeading]
 name=
 
+[Data Sources][Joystick[0] Button[8]]
+name=
+
 [Data Sources][NT:/LiveWindow/Ungrouped/PWM[0]/.actuator]
 name=
 
 [Data Sources][NT:/LiveWindow/Ungrouped/DoubleSolenoid[0,0]/.actuator]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/DoubleSolenoid[0,2]/.controllable]
+name=
+
+[Data Sources][Joystick[0] Button[4]]
 name=
 
 [Data Sources][navX-Sensor[4]-Yaw]
@@ -253,19 +299,31 @@ name=
 [Data Sources][NT:/LiveWindow/Ungrouped/PWM[0]/Value]
 name=
 
+[Data Sources][Joystick[0] POV[0]]
+name=
+
+[Data Sources][Joystick[0] Axis[2]]
+name=
+
 [Data Sources][NT:/LiveWindow/Ungrouped/Compressor[0]/Enabled]
 name=
 
 [Data Sources][Z Accel[0]]
 name=
 
-[Data Sources][NT:/FMSInfo/MatchType]
-name=
-
 [Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/TotalCurrent]
 name=
 
+[Data Sources][NT:/FMSInfo/MatchType]
+name=
+
+[Data Sources][Joystick[0] Button[1]]
+name=
+
 [Data Sources][FMS:AutonomousMode]
+name=
+
+[Data Sources][Joystick[0] Button[5]]
 name=
 
 [Data Sources][Solenoid[0,1]]
@@ -275,6 +333,9 @@ name=
 name=
 
 [Data Sources][FMS:FMSAttached]
+name=
+
+[Data Sources][Joystick[0] Button[9]]
 name=
 
 [Data Sources][FMS:AllianceStationID]
@@ -289,25 +350,43 @@ name=
 [Data Sources][FMS:RobotEnabled]
 name=
 
-[Data Sources][navX-Sensor[4]-LinearWorldAccelZ]
+[Data Sources][navX-Sensor[4]-LinearWorldAccelY]
 name=
 
 [Data Sources][NT:/limelight/ledMode]
 name=
 
-[Data Sources][navX-Sensor[4]-LinearWorldAccelY]
+[Data Sources][FMS:DSAttached]
 name=
 
 [Data Sources][REV Color Sensor V3[0,82]-IR]
 name=
 
-[Data Sources][FMS:DSAttached]
-name=
-
 [Data Sources][navX-Sensor[4]-Roll]
 name=
 
+[Data Sources][navX-Sensor[4]-LinearWorldAccelZ]
+name=
+
+[Data Sources][Joystick[0] Axis[3]]
+name=
+
 [Data Sources][NT:/LiveWindow/Ungrouped/navX-Sensor/Value]
+name=
+
+[Data Sources][/SmartDashboard/Field/Robot[0]/x]
+name=
+
+[Data Sources][/SmartDashboard/Field/Robot[0]/y]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/Compressor[0]/.controllable]
+name=
+
+[Data Sources][Joystick[0] Button[2]]
+name=
+
+[Data Sources][/SmartDashboard/Field/Robot[0]/rot]
 name=
 
 [Data Sources][NT:/FMSInfo/ReplayNumber]
@@ -325,13 +404,22 @@ name=
 [Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Voltage]
 name=
 
+[Data Sources][NT:/LiveWindow/Ungrouped/PWM[0]/.controllable]
+name=
+
 [Data Sources][NT:/LiveWindow/Ungrouped/DoubleSolenoid[0,2]/.actuator]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/DoubleSolenoid[0,0]/.controllable]
 name=
 
 [Data Sources][FMS:EStop]
 name=
 
 [Data Sources][REV Color Sensor V3[0,82]-Green]
+name=
+
+[Data Sources][Joystick[0] Button[10]]
 name=
 
 [Data Sources][NT:/SmartDashboard/Field/.controllable]
@@ -361,22 +449,31 @@ name=
 [Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan15]
 name=
 
+[Data Sources][Joystick[0] Button[6]]
+name=
+
 [Data Sources][X Accel[0]]
 name=
 
 [Data Sources][NT:/LiveWindow/Ungrouped/Compressor[0]/Pressure switch]
 name=
 
-[Data Sources][Closed Loop[0]]
+[Data Sources][Joystick[0] Axis[4]]
+name=
+
+[Data Sources][Joystick[0] Axis[0]]
 name=
 
 [Data Sources][NT:/FMSInfo/IsRedAlliance]
 name=
 
+[Data Sources][Closed Loop[0]]
+name=
+
 [Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan1]
 name=
 
-[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan2]
+[Data Sources][Joystick[0] Button[3]]
 name=
 
 [SimWindow][2D Field Settings]
@@ -479,9 +576,14 @@ name=
 visible=1
 enabled=1
 
-[NTProviderWindow][NetworkTables]
+[NTProviderWindow][/SmartDashboard/Field]
 name=
 visible=1
+enabled=1
+
+[NTProviderWindow][NetworkTables]
+name=
+visible=0
 enabled=1
 
 [NTProvider][/SmartDashboard/Field]
@@ -527,6 +629,10 @@ enabled=1
 name=
 visible=1
 enabled=1
+
+[Joystick][0]
+useGamepad=1
+guid=78696e70757401000000000000000000
 
 [KeyboardJoystick][0]
 axisCount=3
