revert problematic imgui stuff

--- a/imgui.ini
+++ b/imgui.ini
@@ -95,7 +95,7 @@ Collapsed=0
 
 [Window][###Joysticks]
 Pos=250,465
-Size=796,73
+Size=796,240
 Collapsed=0
 
 [Window][###System Joysticks]
@@ -117,13 +117,13 @@ Collapsed=0
 width=1280
 height=720
 maximized=0
-xpos=1560
-ypos=256
+xpos=-26
+ypos=96
 userScale=2
 style=0
 
 [GlassStorage][/SmartDashboard/Field]
-image=E:\Code\Robotics\CompetitionBot2020\res\field.png
+image=
 top=0
 left=0
 bottom=-1
@@ -224,9 +224,6 @@ name=
 [Data Sources][Joystick[0] Button[7]]
 name=
 
-[Data Sources][NT:/FMSInfo/IsRedAlliance]
-name=
-
 [Data Sources][NT:/LiveWindow/Ungrouped/navX-Sensor/.controllable]
 name=
 
@@ -243,6 +240,9 @@ name=
 name=
 
 [Data Sources][NT:/LiveWindow/.status/LW Enabled]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan1]
 name=
 
 [Data Sources][navX-Sensor[4]-Pitch]
@@ -467,10 +467,10 @@ name=
 [Data Sources][Closed Loop[0]]
 name=
 
-[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan0]
+[Data Sources][NT:/FMSInfo/IsRedAlliance]
 name=
 
-[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan1]
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan0]
 name=
 
 [Data Sources][Joystick[0] Button[3]]
@@ -629,6 +629,10 @@ enabled=1
 name=
 visible=1
 enabled=1
+
+[Joystick][0]
+useGamepad=1
+guid=78696e70757401000000000000000000
 
 [KeyboardJoystick][0]
 axisCount=3
