invert the x of the default control scheme because to match logitech and xbox controllers

--- a/imgui.ini
+++ b/imgui.ini
@@ -95,7 +95,7 @@ Collapsed=0
 
 [Window][###Joysticks]
 Pos=250,465
-Size=796,73
+Size=796,240
 Collapsed=0
 
 [Window][###System Joysticks]
@@ -224,16 +224,13 @@ name=
 [Data Sources][Joystick[0] Button[7]]
 name=
 
-[Data Sources][NT:/FMSInfo/IsRedAlliance]
-name=
-
 [Data Sources][NT:/LiveWindow/Ungrouped/navX-Sensor/.controllable]
 name=
 
 [Data Sources][NT:/FMSInfo/FMSControlData]
 name=
 
-[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan2]
+[Data Sources][Joystick[0] Button[3]]
 name=
 
 [Data Sources][NT:/limelight/pipeline]
@@ -243,6 +240,9 @@ name=
 name=
 
 [Data Sources][NT:/LiveWindow/.status/LW Enabled]
+name=
+
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan1]
 name=
 
 [Data Sources][navX-Sensor[4]-Pitch]
@@ -464,16 +464,16 @@ name=
 [Data Sources][Joystick[0] Axis[0]]
 name=
 
+[Data Sources][NT:/FMSInfo/IsRedAlliance]
+name=
+
 [Data Sources][Closed Loop[0]]
 name=
 
 [Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan0]
 name=
 
-[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan1]
-name=
-
-[Data Sources][Joystick[0] Button[3]]
+[Data Sources][NT:/LiveWindow/Ungrouped/PowerDistributionPanel[50]/Chan2]
 name=
 
 [SimWindow][2D Field Settings]
@@ -629,6 +629,10 @@ enabled=1
 name=
 visible=1
 enabled=1
+
+[Joystick][0]
+useGamepad=1
+guid=78696e70757401000000000000000000
 
 [KeyboardJoystick][0]
 axisCount=3
